--- a/store.html
+++ b/store.html
@@ -4,6 +4,7 @@
         <title>When Chait Met Toast | Store</title>
         <meta name ="description" content ="Official page for the band : WCMT">
         <link rel="stylesheet" href="styles.css">
+        <script src="store.js" async></script>
     </head>
     <body>
         <header class="main-header">
@@ -114,32 +115,10 @@
                 <span class="cart-quantity cart-header cart-column">QUANTITY</span>
             </div>
             <div class="cart-items">
-                <div class="cart-row">
-                    <div class="cart-item cart-column">
-                        <img class="cart-item-image" src="images\WCMT\006 - believe.jpg" width="100" height="100">
-                        <span class="cart-item-title">Believe Album</span>
-                    </div>
-                    <span class="cart-price cart-column">$7.99</span>
-                    <div class="cart-item cart-column">
-                        <input class="cart-quantity-input" type="number" value="1">
-                        <button class="btn btn-danger cart-quantity-btn" type="button">REMOVE</button>
-                    </div>
-                </div>
-                <div class="cart-row">
-                    <div class="cart-item cart-column">
-                        <img class="cart-item-image" src="images\WCMT\like a firefly tee.jpg" width="100" height="100">
-                        <span class="cart-item-title">Like a Firefly Tee</span>
-                    </div>
-                    <span class="cart-price cart-column">$19.99</span>
-                    <div class="cart-item cart-column">
-                        <input  class="cart-quantity-input" type="number" value="2">
-                        <button class="btn btn-danger cart-quantity-btn" type="button">REMOVE</button>
-                    </div>
-                </div>
             </div>
             <div class="cart-total">
                 <strong class="cart-total-title">Total</strong>
-                <span class="cart-total-price">$47.97</span>
+                <span class="cart-total-price">$0</span>
             </div>
             <button class="btn btn-primary btn-purchase" type="button">PURCHASE</button>
         </section>
